# datafactory

./: .coveragerc  .gitignore  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: master.yaml  topic.yaml
datafactory/: __init__.py  compat.py  exceptions.py
datafactory/api/: display.py  render.py  special.py
datafactory/containers/: base.py  dict.py  iter.py  list.py
datafactory/fields/: base.py  choice.py  cycle.py  hashof.py  increment.py  pickout.py  sequence.py
datafactory/formatters/: base.py  csv.py  json.py  pickle.py  string.py
datafactory/models/: base.py  dict.py  list.py
datafactory/utils/: datetime.py
tests/: test_api.py  test_example.py
tests/containers/: test_base.py  test_dict.py  test_iter.py  test_list.py
tests/fields/: test_choice.py  test_cycle.py  test_hashof.py  test_increment.py  test_pickout.py  test_sequence.py
tests/formatters/: test_csv.py  test_json.py  test_pickle.py  test_string.py
tests/models/: test_dict.py  test_list.py
tests/utils/: test_datetime.py
