[nosetests]
with-coverage = 1
cover-package = datafactory
exclude = datafactory/tests/*

[metadata]
name = datafactory
version = 1.0.0
author = righ
author_email = righ.m9@gmail.com
url = https://github.com/walkframe/datafactory
license = Apache License 2.0
classifier = 
  Intended Audience :: Developers
  License :: OSI Approved :: Apache License 2.0
  Programming Language :: Python
  Topic :: Software Development
keywords = 
  testdata
  datafactory
  fixtures
  dummydata
  daterange
description = datafactory generates testdata.
long_description = file: README.rst

[options]
packages = find: